--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-native": "0.36.1",
     "react-native-crypto": "^2.0.1",
     "react-native-randombytes": "^2.1.0",
+    "react-native-speech": "^0.1.2",
     "react-native-vector-icons": "^3.0.0"
   },
   "jest": {
