--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "15.3.2",
     "react-native": "0.36.1",
     "react-native-crypto": "^2.0.1",
+    "react-native-fetch-blob": "^0.10.0",
     "react-native-image-picker": "^0.22.14",
     "react-native-randombytes": "^2.1.0",
     "react-native-speech": "^0.1.2",
